--- a/show_data.ipynb
+++ b/show_data.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "73b91ec2",
    "metadata": {},
    "outputs": [
@@ -178,25 +178,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PlaySessionID</th>\n",
-       "      <th>PlayStartTime</th>\n",
        "      <th>UserId</th>\n",
-       "      <th>SSOID</th>\n",
-       "      <th>AssetType</th>\n",
-       "      <th>AssetID</th>\n",
-       "      <th>AssetName</th>\n",
-       "      <th>AssetSolocooID</th>\n",
-       "      <th>AssetOwner</th>\n",
-       "      <th>AssetDuration</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ChannelName</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>UserFlags</th>\n",
-       "      <th>MemberId</th>\n",
-       "      <th>IsKidsMember</th>\n",
-       "      <th>Protocol</th>\n",
-       "      <th>TVAPIAssetId</th>\n",
-       "      <th>SeriesTVAPIAssetId</th>\n",
+       "      <th>BoxType</th>\n",
+       "      <th>Serial</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>App</th>\n",
+       "      <th>FirstActivity</th>\n",
+       "      <th>LastActivity</th>\n",
+       "      <th>OEM</th>\n",
+       "      <th>SubType</th>\n",
        "      <th>BRAND</th>\n",
        "      <th>FILEDATE</th>\n",
        "    </tr>\n",
@@ -204,176 +195,114 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>523f9601-6b7e-568c-834e-00007b724fa9</td>\n",
-       "      <td>2025-04-16 15:58:10</td>\n",
-       "      <td>9cac6e83-88aa-14b0-0b68-60740360d622</td>\n",
-       "      <td>12857125497286</td>\n",
-       "      <td>s</td>\n",
-       "      <td>10015</td>\n",
-       "      <td>nl_NPO2</td>\n",
-       "      <td>10015</td>\n",
+       "      <td>d4ea1dd9-14a5-432a-feba-56343f02074a</td>\n",
+       "      <td>web</td>\n",
+       "      <td>w65d00e20-9687-11ef-bfd4-d7f27eb32b8d</td>\n",
+       "      <td>Edge</td>\n",
+       "      <td>Android 13</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
+       "      <td>2024-10-30 11:48:05</td>\n",
+       "      <td>Edge</td>\n",
        "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2025-04-16 00:00:00</td>\n",
-       "      <td>2032642</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https</td>\n",
-       "      <td>cmEptSYiJIyHWcaSP1PAWirLQUbXUqTm3Xeq-bF0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Canal Digitaal</td>\n",
+       "      <td>Canal Digitaal  Resellers</td>\n",
        "      <td>20250416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>22409601-4b1a-c389-9e9a-0000edfd2271</td>\n",
-       "      <td>2025-04-16 19:45:01</td>\n",
-       "      <td>0d5b01ba-50d4-dd1b-40ad-e55d87d2b78f</td>\n",
-       "      <td>e6c95d72-6ba6-4561-9ba4-f90023d8c66f</td>\n",
-       "      <td>s</td>\n",
-       "      <td>187</td>\n",
-       "      <td>nl_ESPN</td>\n",
-       "      <td>187</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2025-04-16 00:00:00</td>\n",
-       "      <td>2032642</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https</td>\n",
-       "      <td>K0Y-FZZNgbg-JTm3UcTFo3KtNPbhRJQOoagUXH4E</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Canal Digitaal</td>\n",
+       "      <td>5e758086-a2f5-bffe-6393-d9d7a5f46eb6</td>\n",
+       "      <td>stb</td>\n",
+       "      <td>5c:0f:fb:0a:18:ce</td>\n",
+       "      <td>Aria700</td>\n",
+       "      <td>20.2.104_build6-</td>\n",
+       "      <td>130835</td>\n",
+       "      <td>2021-10-29 06:53:56</td>\n",
+       "      <td>2025-04-17 01:37:23</td>\n",
+       "      <td>Amino</td>\n",
+       "      <td>entone</td>\n",
+       "      <td>Canal Digitaal  Resellers</td>\n",
        "      <td>20250416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>d13f9601-14b1-5e85-9ccb-0001096118bf</td>\n",
-       "      <td>2025-04-16 18:17:09</td>\n",
-       "      <td>d46d93c9-d514-a6b3-edc7-9cb9fbdea6a4</td>\n",
-       "      <td>33731602422</td>\n",
-       "      <td>s</td>\n",
-       "      <td>158</td>\n",
-       "      <td>de_RTL2SD</td>\n",
-       "      <td>158</td>\n",
+       "      <td>8993fc21-10fb-44b4-8bed-c55f44268a8c</td>\n",
+       "      <td>stb</td>\n",
+       "      <td>44:f0:34:7c:32:39</td>\n",
+       "      <td>MZ101</td>\n",
+       "      <td>332</td>\n",
+       "      <td>63005</td>\n",
+       "      <td>2019-07-11 20:18:57</td>\n",
+       "      <td>2019-07-15 01:00:05</td>\n",
        "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
        "      <td>None</td>\n",
-       "      <td>2025-04-16 00:00:00</td>\n",
-       "      <td>1639426</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>dvbs</td>\n",
-       "      <td>BEhLG_RwjRKI5RCxHvRofhh2CoPqkiQUMCXrrjL1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Canal Digitaal</td>\n",
+       "      <td>Canal Digitaal  Resellers</td>\n",
        "      <td>20250416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>b23d9601-6a84-d98f-8c04-0001146af733</td>\n",
-       "      <td>2025-04-16 08:23:52</td>\n",
-       "      <td>abf40d59-5160-8082-e8c5-0f534eef0684</td>\n",
-       "      <td>051603686180</td>\n",
-       "      <td>s</td>\n",
-       "      <td>69</td>\n",
-       "      <td>nl_RTL4</td>\n",
-       "      <td>69</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2025-04-16 00:00:00</td>\n",
-       "      <td>4129794</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>dvbs</td>\n",
-       "      <td>UZ823Q9iXs61u7D-6MIM5VQ-ZSTbu8FY8ubr0YEc</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Canal Digitaal</td>\n",
+       "      <td>350cf96f-b7cd-1e5b-ff1d-e98a4ca69686</td>\n",
+       "      <td>ctv</td>\n",
+       "      <td>androidtv.m7cp.9792aed6200a2bcc</td>\n",
+       "      <td>EcoTV D</td>\n",
+       "      <td>11</td>\n",
+       "      <td>132012</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
+       "      <td>2025-04-14 17:48:24</td>\n",
+       "      <td>KTC</td>\n",
+       "      <td>android</td>\n",
+       "      <td>Canal Digitaal  Resellers</td>\n",
        "      <td>20250416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>313f9601-cc65-2c8a-9844-000121fed585</td>\n",
-       "      <td>2025-04-16 15:22:04</td>\n",
-       "      <td>4ff0091c-f26f-f02b-9f28-edd21e3a1f38</td>\n",
-       "      <td>33731502044</td>\n",
-       "      <td>s</td>\n",
-       "      <td>226</td>\n",
-       "      <td>de_WDR_Koeln</td>\n",
-       "      <td>226</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2025-04-16 00:00:00</td>\n",
-       "      <td>4129794</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>dvbs</td>\n",
-       "      <td>dLoS4rjAJ1kmZxY1tQs9TQR3GbyPnKwmmncvro4s</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Canal Digitaal</td>\n",
+       "      <td>a336e7b9-1f15-131e-9248-5d06d8835860</td>\n",
+       "      <td>stb</td>\n",
+       "      <td>5c:0f:fb:27:fc:68</td>\n",
+       "      <td>Aria700</td>\n",
+       "      <td>20.2.104_build6-</td>\n",
+       "      <td>132012</td>\n",
+       "      <td>2024-01-30 11:26:29</td>\n",
+       "      <td>2025-04-17 01:30:44</td>\n",
+       "      <td>Amino</td>\n",
+       "      <td>entone</td>\n",
+       "      <td>Canal Digitaal  Resellers</td>\n",
        "      <td>20250416</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          PlaySessionID        PlayStartTime  \\\n",
-       "0  523f9601-6b7e-568c-834e-00007b724fa9  2025-04-16 15:58:10   \n",
-       "1  22409601-4b1a-c389-9e9a-0000edfd2271  2025-04-16 19:45:01   \n",
-       "2  d13f9601-14b1-5e85-9ccb-0001096118bf  2025-04-16 18:17:09   \n",
-       "3  b23d9601-6a84-d98f-8c04-0001146af733  2025-04-16 08:23:52   \n",
-       "4  313f9601-cc65-2c8a-9844-000121fed585  2025-04-16 15:22:04   \n",
+       "                                 UserId BoxType  \\\n",
+       "0  d4ea1dd9-14a5-432a-feba-56343f02074a     web   \n",
+       "1  5e758086-a2f5-bffe-6393-d9d7a5f46eb6     stb   \n",
+       "2  8993fc21-10fb-44b4-8bed-c55f44268a8c     stb   \n",
+       "3  350cf96f-b7cd-1e5b-ff1d-e98a4ca69686     ctv   \n",
+       "4  a336e7b9-1f15-131e-9248-5d06d8835860     stb   \n",
        "\n",
-       "                                 UserId                                 SSOID  \\\n",
-       "0  9cac6e83-88aa-14b0-0b68-60740360d622                        12857125497286   \n",
-       "1  0d5b01ba-50d4-dd1b-40ad-e55d87d2b78f  e6c95d72-6ba6-4561-9ba4-f90023d8c66f   \n",
-       "2  d46d93c9-d514-a6b3-edc7-9cb9fbdea6a4                           33731602422   \n",
-       "3  abf40d59-5160-8082-e8c5-0f534eef0684                          051603686180   \n",
-       "4  4ff0091c-f26f-f02b-9f28-edd21e3a1f38                           33731502044   \n",
+       "                                  Serial    Model                OS     App  \\\n",
+       "0  w65d00e20-9687-11ef-bfd4-d7f27eb32b8d     Edge        Android 13    11.4   \n",
+       "1                      5c:0f:fb:0a:18:ce  Aria700  20.2.104_build6-  130835   \n",
+       "2                      44:f0:34:7c:32:39    MZ101               332   63005   \n",
+       "3        androidtv.m7cp.9792aed6200a2bcc  EcoTV D                11  132012   \n",
+       "4                      5c:0f:fb:27:fc:68  Aria700  20.2.104_build6-  132012   \n",
        "\n",
-       "  AssetType AssetID     AssetName AssetSolocooID AssetOwner  AssetDuration  \\\n",
-       "0         s   10015       nl_NPO2          10015       None              0   \n",
-       "1         s     187       nl_ESPN            187       None              0   \n",
-       "2         s     158     de_RTL2SD            158       None              0   \n",
-       "3         s      69       nl_RTL4             69       None              0   \n",
-       "4         s     226  de_WDR_Koeln            226       None              0   \n",
+       "         FirstActivity         LastActivity    OEM  SubType  \\\n",
+       "0  0001-01-01 00:00:00  2024-10-30 11:48:05   Edge     None   \n",
+       "1  2021-10-29 06:53:56  2025-04-17 01:37:23  Amino   entone   \n",
+       "2  2019-07-11 20:18:57  2019-07-15 01:00:05   None     None   \n",
+       "3  0001-01-01 00:00:00  2025-04-14 17:48:24    KTC  android   \n",
+       "4  2024-01-30 11:26:29  2025-04-17 01:30:44  Amino   entone   \n",
        "\n",
-       "   ...  ChannelName                 Date UserFlags  MemberId IsKidsMember  \\\n",
-       "0  ...         None  2025-04-16 00:00:00   2032642         0        False   \n",
-       "1  ...         None  2025-04-16 00:00:00   2032642         0        False   \n",
-       "2  ...         None  2025-04-16 00:00:00   1639426         0        False   \n",
-       "3  ...         None  2025-04-16 00:00:00   4129794         1        False   \n",
-       "4  ...         None  2025-04-16 00:00:00   4129794         0        False   \n",
-       "\n",
-       "  Protocol                              TVAPIAssetId SeriesTVAPIAssetId  \\\n",
-       "0    https  cmEptSYiJIyHWcaSP1PAWirLQUbXUqTm3Xeq-bF0               None   \n",
-       "1    https  K0Y-FZZNgbg-JTm3UcTFo3KtNPbhRJQOoagUXH4E               None   \n",
-       "2     dvbs  BEhLG_RwjRKI5RCxHvRofhh2CoPqkiQUMCXrrjL1               None   \n",
-       "3     dvbs  UZ823Q9iXs61u7D-6MIM5VQ-ZSTbu8FY8ubr0YEc               None   \n",
-       "4     dvbs  dLoS4rjAJ1kmZxY1tQs9TQR3GbyPnKwmmncvro4s               None   \n",
-       "\n",
-       "            BRAND  FILEDATE  \n",
-       "0  Canal Digitaal  20250416  \n",
-       "1  Canal Digitaal  20250416  \n",
-       "2  Canal Digitaal  20250416  \n",
-       "3  Canal Digitaal  20250416  \n",
-       "4  Canal Digitaal  20250416  \n",
-       "\n",
-       "[5 rows x 31 columns]"
+       "                       BRAND  FILEDATE  \n",
+       "0  Canal Digitaal  Resellers  20250416  \n",
+       "1  Canal Digitaal  Resellers  20250416  \n",
+       "2  Canal Digitaal  Resellers  20250416  \n",
+       "3  Canal Digitaal  Resellers  20250416  \n",
+       "4  Canal Digitaal  Resellers  20250416  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +312,7 @@
     "from pathlib import Path\n",
     "\n",
     "# Définir le chemin vers le fichier Parquet\n",
-    "file_path = Path(\"data/gold/Playback_20250416.parquet\")\n",
+    "file_path = Path(\"data/gold/Device_20250416.parquet\")\n",
     "\n",
     "# Lire le fichier\n",
     "df = pd.read_parquet(file_path)\n",
