readme and scripts clean

--- a/show_data.ipynb
+++ b/show_data.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "73b91ec2",
    "metadata": {},
    "outputs": [
@@ -190,119 +190,125 @@
        "      <th>SubType</th>\n",
        "      <th>BRAND</th>\n",
        "      <th>FILEDATE</th>\n",
+       "      <th>ResellerId</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>d4ea1dd9-14a5-432a-feba-56343f02074a</td>\n",
+       "      <td>3599e021-1e7e-3320-519c-85b4768da024</td>\n",
        "      <td>web</td>\n",
-       "      <td>w65d00e20-9687-11ef-bfd4-d7f27eb32b8d</td>\n",
-       "      <td>Edge</td>\n",
-       "      <td>Android 13</td>\n",
-       "      <td>11.4</td>\n",
+       "      <td>wa81b2200-d0d6-11e9-b917-19360bbeb2b2</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>76.0</td>\n",
        "      <td>0001-01-01 00:00:00</td>\n",
-       "      <td>2024-10-30 11:48:05</td>\n",
-       "      <td>Edge</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
        "      <td>None</td>\n",
-       "      <td>Canal Digitaal  Resellers</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Canal Digitaal</td>\n",
        "      <td>20250416</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5e758086-a2f5-bffe-6393-d9d7a5f46eb6</td>\n",
-       "      <td>stb</td>\n",
-       "      <td>5c:0f:fb:0a:18:ce</td>\n",
-       "      <td>Aria700</td>\n",
-       "      <td>20.2.104_build6-</td>\n",
-       "      <td>130835</td>\n",
-       "      <td>2021-10-29 06:53:56</td>\n",
-       "      <td>2025-04-17 01:37:23</td>\n",
-       "      <td>Amino</td>\n",
-       "      <td>entone</td>\n",
-       "      <td>Canal Digitaal  Resellers</td>\n",
+       "      <td>19d8f825-65d7-1e61-db53-ddd547cc2833</td>\n",
+       "      <td>ctv</td>\n",
+       "      <td>androidstb.1oz2zoa9ou80g17dssnxtavokt</td>\n",
+       "      <td>QM163E</td>\n",
+       "      <td>8.0.0</td>\n",
+       "      <td>124612</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
+       "      <td>2024-08-22 21:00:46</td>\n",
+       "      <td>PHILIPS</td>\n",
+       "      <td>android</td>\n",
+       "      <td>Canal Digitaal</td>\n",
        "      <td>20250416</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8993fc21-10fb-44b4-8bed-c55f44268a8c</td>\n",
-       "      <td>stb</td>\n",
-       "      <td>44:f0:34:7c:32:39</td>\n",
-       "      <td>MZ101</td>\n",
-       "      <td>332</td>\n",
-       "      <td>63005</td>\n",
-       "      <td>2019-07-11 20:18:57</td>\n",
-       "      <td>2019-07-15 01:00:05</td>\n",
+       "      <td>338e2f0f-da3b-21fd-c68e-802331c3d43e</td>\n",
+       "      <td>Android Phone</td>\n",
+       "      <td>Acds10c6fc73d3bc275b</td>\n",
+       "      <td>Xiaomi M2102J20SG</td>\n",
+       "      <td>Android 12 (31)</td>\n",
+       "      <td>10.4 (1695374287</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
+       "      <td>2023-10-14 20:04:46</td>\n",
+       "      <td>Xiaomi</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Canal Digitaal  Resellers</td>\n",
+       "      <td>Canal Digitaal</td>\n",
        "      <td>20250416</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>350cf96f-b7cd-1e5b-ff1d-e98a4ca69686</td>\n",
-       "      <td>ctv</td>\n",
-       "      <td>androidtv.m7cp.9792aed6200a2bcc</td>\n",
-       "      <td>EcoTV D</td>\n",
-       "      <td>11</td>\n",
-       "      <td>132012</td>\n",
+       "      <td>29b1757f-6624-f3bf-a82a-30aff94e2ef6</td>\n",
+       "      <td>web</td>\n",
+       "      <td>w6da1a9d0-3205-11ed-a0b3-53086fdfac58</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>Windows NT 10.0</td>\n",
+       "      <td>105.0.0.0</td>\n",
        "      <td>0001-01-01 00:00:00</td>\n",
-       "      <td>2025-04-14 17:48:24</td>\n",
-       "      <td>KTC</td>\n",
-       "      <td>android</td>\n",
-       "      <td>Canal Digitaal  Resellers</td>\n",
+       "      <td>2022-09-14 17:05:45</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Canal Digitaal</td>\n",
        "      <td>20250416</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>a336e7b9-1f15-131e-9248-5d06d8835860</td>\n",
-       "      <td>stb</td>\n",
-       "      <td>5c:0f:fb:27:fc:68</td>\n",
-       "      <td>Aria700</td>\n",
-       "      <td>20.2.104_build6-</td>\n",
-       "      <td>132012</td>\n",
-       "      <td>2024-01-30 11:26:29</td>\n",
-       "      <td>2025-04-17 01:30:44</td>\n",
-       "      <td>Amino</td>\n",
-       "      <td>entone</td>\n",
-       "      <td>Canal Digitaal  Resellers</td>\n",
+       "      <td>83538193-7fcf-f665-8a03-babeb39577fa</td>\n",
+       "      <td>Android Phone</td>\n",
+       "      <td>A5d06ecd65acaa70c</td>\n",
+       "      <td>motorola Moto G (5) Plus</td>\n",
+       "      <td>27 (8.1.0)</td>\n",
+       "      <td>1576138041</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
+       "      <td>0001-01-01 00:00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Canal Digitaal</td>\n",
        "      <td>20250416</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 UserId BoxType  \\\n",
-       "0  d4ea1dd9-14a5-432a-feba-56343f02074a     web   \n",
-       "1  5e758086-a2f5-bffe-6393-d9d7a5f46eb6     stb   \n",
-       "2  8993fc21-10fb-44b4-8bed-c55f44268a8c     stb   \n",
-       "3  350cf96f-b7cd-1e5b-ff1d-e98a4ca69686     ctv   \n",
-       "4  a336e7b9-1f15-131e-9248-5d06d8835860     stb   \n",
+       "                                 UserId        BoxType  \\\n",
+       "0  3599e021-1e7e-3320-519c-85b4768da024            web   \n",
+       "1  19d8f825-65d7-1e61-db53-ddd547cc2833            ctv   \n",
+       "2  338e2f0f-da3b-21fd-c68e-802331c3d43e  Android Phone   \n",
+       "3  29b1757f-6624-f3bf-a82a-30aff94e2ef6            web   \n",
+       "4  83538193-7fcf-f665-8a03-babeb39577fa  Android Phone   \n",
        "\n",
-       "                                  Serial    Model                OS     App  \\\n",
-       "0  w65d00e20-9687-11ef-bfd4-d7f27eb32b8d     Edge        Android 13    11.4   \n",
-       "1                      5c:0f:fb:0a:18:ce  Aria700  20.2.104_build6-  130835   \n",
-       "2                      44:f0:34:7c:32:39    MZ101               332   63005   \n",
-       "3        androidtv.m7cp.9792aed6200a2bcc  EcoTV D                11  132012   \n",
-       "4                      5c:0f:fb:27:fc:68  Aria700  20.2.104_build6-  132012   \n",
+       "                                  Serial                     Model  \\\n",
+       "0  wa81b2200-d0d6-11e9-b917-19360bbeb2b2                    Chrome   \n",
+       "1  androidstb.1oz2zoa9ou80g17dssnxtavokt                    QM163E   \n",
+       "2                   Acds10c6fc73d3bc275b         Xiaomi M2102J20SG   \n",
+       "3  w6da1a9d0-3205-11ed-a0b3-53086fdfac58                    Chrome   \n",
+       "4                      A5d06ecd65acaa70c  motorola Moto G (5) Plus   \n",
        "\n",
-       "         FirstActivity         LastActivity    OEM  SubType  \\\n",
-       "0  0001-01-01 00:00:00  2024-10-30 11:48:05   Edge     None   \n",
-       "1  2021-10-29 06:53:56  2025-04-17 01:37:23  Amino   entone   \n",
-       "2  2019-07-11 20:18:57  2019-07-15 01:00:05   None     None   \n",
-       "3  0001-01-01 00:00:00  2025-04-14 17:48:24    KTC  android   \n",
-       "4  2024-01-30 11:26:29  2025-04-17 01:30:44  Amino   entone   \n",
+       "                OS               App        FirstActivity  \\\n",
+       "0       Windows 10              76.0  0001-01-01 00:00:00   \n",
+       "1            8.0.0            124612  0001-01-01 00:00:00   \n",
+       "2  Android 12 (31)  10.4 (1695374287  0001-01-01 00:00:00   \n",
+       "3  Windows NT 10.0         105.0.0.0  0001-01-01 00:00:00   \n",
+       "4       27 (8.1.0)        1576138041  0001-01-01 00:00:00   \n",
        "\n",
-       "                       BRAND  FILEDATE  \n",
-       "0  Canal Digitaal  Resellers  20250416  \n",
-       "1  Canal Digitaal  Resellers  20250416  \n",
-       "2  Canal Digitaal  Resellers  20250416  \n",
-       "3  Canal Digitaal  Resellers  20250416  \n",
-       "4  Canal Digitaal  Resellers  20250416  "
+       "          LastActivity      OEM  SubType           BRAND  FILEDATE ResellerId  \n",
+       "0  0001-01-01 00:00:00     None     None  Canal Digitaal  20250416       None  \n",
+       "1  2024-08-22 21:00:46  PHILIPS  android  Canal Digitaal  20250416       None  \n",
+       "2  2023-10-14 20:04:46   Xiaomi     None  Canal Digitaal  20250416       None  \n",
+       "3  2022-09-14 17:05:45   Chrome     None  Canal Digitaal  20250416       None  \n",
+       "4  0001-01-01 00:00:00     None     None  Canal Digitaal  20250416       None  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,6 +325,61 @@
     "\n",
     "# Afficher un aperçu\n",
     "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f8353459",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 UserId BoxType             Serial Model  \\\n",
+      "0  4b87e7e6-5c26-745a-bb26-059c41496b4d     stb  00:02:02:37:89:19  None   \n",
+      "1  c024f112-f232-971c-1964-18d9f3f64be4     stb  00:02:02:37:8c:6e  None   \n",
+      "2  2dfd9464-1aef-a51e-1b5e-4b4a1efee197     stb  00:02:02:37:8d:a4  None   \n",
+      "3  aa8f299c-5001-419a-3e9d-0fe3a9f6e6b0     stb  00:02:02:38:a8:31  None   \n",
+      "4  6616d669-0a78-b5d4-2f6a-e11b1e947173     stb  00:02:02:38:aa:63  None   \n",
+      "\n",
+      "     OS   App        FirstActivity         LastActivity   OEM SubType  \\\n",
+      "0  None  None  0001-01-01 00:00:00  0001-01-01 00:00:00  None    None   \n",
+      "1  None  None  0001-01-01 00:00:00  0001-01-01 00:00:00  None    None   \n",
+      "2  None  None  0001-01-01 00:00:00  0001-01-01 00:00:00  None    None   \n",
+      "3  None  None  0001-01-01 00:00:00  0001-01-01 00:00:00  None    None   \n",
+      "4  None  None  0001-01-01 00:00:00  0001-01-01 00:00:00  None    None   \n",
+      "\n",
+      "            BRAND  FILEDATE ResellerId  \n",
+      "0  Canal Digitaal  20250416    cds-onl  \n",
+      "1  Canal Digitaal  20250416    cds-onl  \n",
+      "2  Canal Digitaal  20250416    cds-onl  \n",
+      "3  Canal Digitaal  20250416    cds-onl  \n",
+      "4  Canal Digitaal  20250416    cds-onl  \n",
+      "\n",
+      "Nombre de lignes avec ResellerId : 1049901\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Chemin vers le fichier Parquet\n",
+    "file_path = Path(\"data/gold/Device_20250416.parquet\")\n",
+    "\n",
+    "# Lire le fichier Parquet\n",
+    "df = pd.read_parquet(file_path)\n",
+    "\n",
+    "# Filtrer les lignes avec un ResellerId non vide ou non nul\n",
+    "filtered_df = df[df['ResellerId'].notna() & (df['ResellerId'] != '')]\n",
+    "\n",
+    "# Afficher un aperçu des données filtrées\n",
+    "print(filtered_df.head())\n",
+    "\n",
+    "# Afficher le nombre de lignes avec un ResellerId\n",
+    "print(f\"\\nNombre de lignes avec ResellerId : {len(filtered_df)}\")\n"
    ]
   }
  ],
